# neumusic

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  build_appimage.sh  download_fonts.sh
src/: app.rs  converter.rs  downloader.rs  lib.rs  main.rs  spectrogram.rs
